       Canon SELPHY ES1
       Canon SELPHY ES2
       Canon SELPHY ES3
       Canon SELPHY ES30
       Canon SELPHY ES40
       Canon SELPHY CP-10
       Canon SELPHY CP-100
       Canon SELPHY CP-200
       Canon SELPHY CP-220
       Canon SELPHY CP-300
       Canon SELPHY CP-330
       Canon SELPHY CP400
       Canon SELPHY CP500
       Canon SELPHY CP510
       Canon SELPHY CP600
       Canon SELPHY CP710
       Canon SELPHY CP720
       Canon SELPHY CP730
       Canon SELPHY CP750
       Canon SELPHY CP760
       Canon SELPHY CP780
       Canon SELPHY CP800
       Canon iP2700 series
       Canon PIXMA iP3000
       Canon PIXMA iP4000 (possibly incomplete)
       Canon PIXMA iP4200 (possibly incomplete)
       Canon Pro9000 II series (possibly incomplete)
       Canon MP160
       Canon MP250 series
       Canon MP280 series (possibly incomplete)
       Canon MP450 series

     - Device IDs added for the following Epson printers:
       Epson Stylus Photo 1270
       Epson Stylus Photo R2400
       Epson Stylus C92
       Epson Stylus D78
       Epson Stylus Color 680

     - Device IDs added for the following Bother printers:
       Brother HL-2030 series

     - Device IDs added for the following Hewlett-Packard printers:
       HP Color LaserJet 2500
       HP Color LaserJet 4550 (added space in DES)
       HP LaserJet 4050 (added space in DES)
       HP LaserJet 4100 (added space in DES)
       HP LaserJet 4350 (improved)
       HP LaserJet 5100
       HP LaserJet 8000
       HP LaserJet M3027 MFP (corrected)
       HP LaserJet M3035 MFP (corrected)
       HP LaserJet P3005 (corrected)

     - Device IDs added for the following Samsung printers:
       Samsung ML-1450 (possibly incomplete)

     - Device IDs added for the following Kodak printers:
       Kodak 1400
       Kodak 605
       Kodak 805
       Kodak 6800
       Kodak 6850

     - Device IDs added for the following Kyocera printers:
       Kyocera FS-1118MFP
