@@ -1193,6 +1193,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY CP400
        Canon SELPHY CP500
        Canon SELPHY CP510
+       Canon SELPHY CP530
        Canon SELPHY CP600
        Canon SELPHY CP710
        Canon SELPHY CP720
@@ -1201,6 +1202,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY CP760
        Canon SELPHY CP780
        Canon SELPHY CP800
+       Canon SELPHY CP810
        Canon iP2700 series
        Canon PIXMA iP3000
        Canon PIXMA iP4000 (possibly incomplete)
